# cpu-time

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  vagga.yaml
src/: clock_gettime.rs  lib.rs  linux.rs  windows.rs
tests/: time.rs
